--- a/capstone.html
+++ b/capstone.html
@@ -1,2 +1,36 @@
 <html !DOCTYPE>
+    <head>
+        <title> The Market </title>
+        <style>
+
+        </style>
+    </head>
+    <body>
+        <!-- THIS IS THE HEAD OF THE PAGE: LOGO, TITLE, ADMIN, etc.-->
+        <div class = "upperPortion">
+            <button class = "goToAdmin"> Admin </button>
+            <h1> The Market </h1>
+            <image class = "lpcLogo"></image>
+        </div>
+
+
+        <!-- THIS IS THE BODY OF THE PAGE -->
+        <div class = "operational"> 
+            
+            <span class = "left" >
+                <h3> Returning Patrons </h3> 
+                <p> Please look for your name if you are a returning _____ of the LPC Market </p>
+                <div class = "retsDropDown">
+                    <!-- LINK CAN BE FOUND HERE:
+                    https://www.w3schools.com/howto/howto_js_filter_dropdown.asp
+                    -->
+                </div>
+            </span>
+            <span class = "right">
+                <h3> Newcoming Patrons</h3>
+                <p>Please Click the Button below if you're new to the market, and enter the information as instructed</p> 
+                <button class = "newPatsInfoReveal"> I am new to the markey </button>
+            </span>
+        </div>
+    </body>
 </html>
