finished main structure

--- a/capstone.html
+++ b/capstone.html
@@ -2,15 +2,37 @@
     <head>
         <title> The Market </title>
         <style>
-
+            .lpcLogo
+            {
+                border-radius: 15px;
+                height: 10%;
+                width: 20%;
+            }
         </style>
+
+        <link rel="shortcut icon" href="Logos/s-logo.jpg"/>
+
+        <!-- Bootstrap for CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+        <link rel = "stylesheet" type = "text/css" href = "shahaf.css">
+
+        <!-- Bootstrap for JQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+        <!-- Bootstrap for JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+        <!-- Bootstrap for CSS Icon -->
+        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
     </head>
     <body>
         <!-- THIS IS THE HEAD OF THE PAGE: LOGO, TITLE, ADMIN, etc.-->
         <div class = "upperPortion">
+            <img src = "pics/lpcLogo.png" class = "lpcLogo">
             <button class = "goToAdmin"> Admin </button>
             <h1> The Market </h1>
-            <image class = "lpcLogo"></image>
+            
         </div>
 
 
