fixed php connection

--- a/capstone.html
+++ b/capstone.html
@@ -25,7 +25,7 @@
     <body class = "body">
         <br><br>
         <!-- THIS IS THE HEAD OF THE PAGE: LOGO, TITLE, ADMIN, etc.-->
-        
+        <!-- LOOK INTO FLEX BOXED: DIVIDE THIS DIV INTO 3 SEGMENTS -->
         <div class = "upperPortion">
             
                 <img src = "pics/lpcLogo.png" class = "lpcLogo pull-right"> &nbsp; &nbsp;
@@ -101,6 +101,8 @@
                     <input type = "number" class = "mandatory form-control" id = "input" name = "input" placeholder="Seniors (Ages 64 +)" required pattern = "\S+.*"><br>
                 </div>
                 <hr>
+                <!----- MAKE EMAIL MANDATORY !!!
+                -->
                 <div id = "PersonalInfo" class = "infoDiv">
                     <h4> Contact Information </h4>
                     <input type = "text" class = "optional form-control" id = "input" name = "input" placeholder="email address" ><br>
