connecting html to php now

--- a/capstone.html
+++ b/capstone.html
@@ -53,6 +53,7 @@
                     <br><br>
                     <p> please choose your name from the dropdown below </p>
                     <!-- DROP DOWN STARTS HERE -->
+                    <!-- TAKE CARE OF THAT LATER... POST OR PULL? (What is the oppositve of a pull form?)-->
                     <div id="myDropdown" class="dropdown-content">
                        <input type="text" placeholder="Search..." id="myInput" onkeyup="filterFunction()">
                         <a href="#about">About</a>
@@ -73,13 +74,15 @@
                 
                 <button id = "newPatsInfoReveal" class = "btn btn-warning" data-toggle = "collapse" data-target = "#newPats_div" > It's my first time here </button>
             
+
             <div class = "collapse" id = "newPats_div">
+                <form method = "post" action = "capstone.php"> <!-- FORM FOR NEW PATRONS -->
                 <h3> Please fill out the followings</h3>
                 <p> Red Border = Mandatory <br> Black border = Optional <br> Green Border = Filled </p> 
                 <div id = "name" class = "infoDiv">
                     <h4> Please enter you first and last name </h4>
-                    <input type = "text" class = "mandatory form-control" placeholder="Please enter your first name" class = "firstName" id = "input" name = "input" required pattern = "\S+.*"> &nbsp;
-                    <input type = "text" class = "mandatory form-control" placeholder="Please enter your last name" class = "lastName" id = "input" name = "input" required pattern = "\S+.*"> &nbsp;
+                    <input type = "text" class = "mandatory form-control" placeholder="Please enter your first name" class = "firstName" id = "input" name = "first_name" required pattern = "\S+.*"> &nbsp;
+                    <input type = "text" class = "mandatory form-control" placeholder="Please enter your last name" class = "lastName" id = "input" name = "last_name" required pattern = "\S+.*"> &nbsp;
                 </div>
                 <hr>
                 <div id = "student?" class = "infoDiv">
@@ -96,9 +99,9 @@
                 <hr>
                 <div id = "household" class = "infoDiv">
                     <h4> How many people are in your family? (per age) </h4>
-                    <input type = "number" class = "mandatory form-control" id = "input" name = "input" placeholder="Children (Ages 0 - 17)" required pattern="\S+.*"><br>
-                    <input type = "number" class = "mandatory form-control" id = "input" name = "input" placeholder="Adults (Ages 18 - 64)" required pattern = "\S+.*"><br>
-                    <input type = "number" class = "mandatory form-control" id = "input" name = "input" placeholder="Seniors (Ages 64 +)" required pattern = "\S+.*"><br>
+                    <input type = "number" class = "mandatory form-control" id = "input" name = "children_amount" placeholder="Children (Ages 0 - 17)" required pattern="\S+.*"><br>
+                    <input type = "number" class = "mandatory form-control" id = "input" name = "adults_amount" placeholder="Adults (Ages 18 - 64)" required pattern = "\S+.*"><br>
+                    <input type = "number" class = "mandatory form-control" id = "input" name = "seniors_amount" placeholder="Seniors (Ages 64 +)" required pattern = "\S+.*"><br>
                 </div>
                 <hr>
                 <!----- MAKE EMAIL MANDATORY !!!
@@ -127,7 +130,7 @@
                     </div>
                 </div>
                 <button class = "btn btn-secondary" id = submitBtn> SUBMIT </button>
-
+                </form> <!-- WE END THE FORM FOR NEW PATRONS -->
             </div> 
             </span>
             <br><br><br>
