password verificiation works

--- a/admin.html
+++ b/admin.html
@@ -10,7 +10,7 @@
 
 <html !DOCTYPE>
     <head>
-        <title>Market's Admin Page</titel>
+        <title>Market's Admin Page</title>
     </head>
 
     <body>
