added connDB.php with connDB()

--- a/inventory.html
+++ b/inventory.html
@@ -28,11 +28,11 @@
         <br>
         <button class = "btn btn-warning collapsed" data-toggle="collapse" data-target="#edit_inv" aria-expanded="false" id = "submit"> EDIT INVENTORY </button><br>
         <div class = "inv_box_class collapse" id = "edit_inv">
-            <h4><u> EDIT INVENTORY </u></h4>
+            <h4><u> ADD TO INVENTORY </u></h4>
             <br>
             <input type = "text" name = "item_name" class = "inv_input" placeholder="Item Name">
             <input type = "number" name = "item_number" class = "inv_input" placeholder="Quantity">
-            <button class = "btn btn-success inv_input_btn"> Insert </button>
+            <button class = "btn btn-success inv_input_btn"> ADD ITEM </button>
         </div>
         <br><br>
         <button class = "btn btn-warning collapsed" data-toggle="collapse" data-target="#view_inv" aria-expanded="false" id = "submit"> VIEW INVENTORY </button><br>
