start pdf generation, background css fix (thank you carlos)

--- a/noActiveMarket.html
+++ b/noActiveMarket.html
@@ -6,10 +6,10 @@
         <link rel="shortcut icon" href="pics/lpcsgLogo.jpg"/>
 
         <!-- Bootstrap for CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"/>
 
         <!-- CSS HARDCODE FILE LINK -->
-        <link rel = "stylesheet" type = "text/css" href = "capstone.css">
+        <link rel = "stylesheet" type = "text/css" href = "capstone.css"/>
         <style>
             html, body
             {
@@ -30,7 +30,7 @@
         <br><br><br>
         <div>
             <br>
-            <div class = "midPageMsg">
+            <div>
                 <h2> No Market is Currently Active. Please Go to the Admin Page, and Activate One!</h2>
                 <br>
                 <button class = "btn btn-primary admin" onclick = location.replace('admin.php')>ADMIN PAGE</button>
