--- a/noCurrentReport.html
+++ b/noCurrentReport.html
@@ -2,31 +2,13 @@
 <html>
     <head>
         <title> The Market </title>
-
-        <link rel="shortcut icon" href="otherFiles/pics/lpcsgLogo.jpg"/>
-
         <!-- Bootstrap for CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"/>
 
         <!-- CSS HARDCODE FILE LINK -->
-        <link rel = "stylesheet" type = "text/css" href = "capstone.css"/>
-        <style>
-            html, body
-            {
-                margin: 0;
-                height: 100%;
-            }
-            .body_noMarket
-            {
-                text-align: center;
-                background-image: linear-gradient(rgb(255, 191, 128), rgb(255, 153, 51)) !important;
-                height: 100% !important;
-                padding-top: 10% !important;
-                padding-bottom: 10% !important;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="capstone.css">
     </head>
-    <body class = "body_noMarket">
+    <body class = "body_none">
         <br><br><br>
         <div>
             <br>
@@ -34,7 +16,7 @@
                 <h2> Nothing to report at the moment. No Attendance has been recorded yet.</h2>
                 <br>
                 <h4 class = "inline"> You can sign in to the market by clicking this button! </h4> &nbsp; &nbsp;
-                <button class = "inline btn btn-primary admin" onclick = "location.replace('index.php')">THE MARKET </button>
+                <button class = "inline btn btn-primary sideBtn" onclick = "location.replace('index.php')">THE MARKET </button>
                 <br>
                 <h4>  </h4>
                 <br>
