my code won't update for some reason

--- a/noActiveMarket.html
+++ b/noActiveMarket.html
@@ -7,8 +7,13 @@
 
         <!-- CSS HARDCODE FILE LINK -->
         <link rel="stylesheet" type="text/css" href="capstone.css">
+
+                <!-- JAVASCRIPT PAGE CONNECTION-->
+                <script src="captsone.js"></script>
+
+                
     </head>
-    <body class = "body_none">
+    <body class = "bodyNone">
         <br><br><br>
         <div>
             <br>
@@ -26,8 +31,8 @@
                 <br><br><br>
                 <h4> SEE YOU LATER </h4>
                 <br>
-                <img src = "otherFiles/pics/lpcLogo.png" class = "lpcLogo"> &nbsp; &nbsp;
-                <img src = "otherFiles/pics/lpcsgLogo.jpg" class = "lpcsgLogo">
+                <img src = "otherFiles/pics/lpcLogo.png" style = "height: 10% !important;"> &nbsp; &nbsp;
+                <img src = "otherFiles/pics/lpcsgLogo.jpg" style = "height: 10% !important;">
             </div>
             <br>
         </div>
