--- a/noCurrentReport.html
+++ b/noCurrentReport.html
@@ -7,8 +7,11 @@
 
         <!-- CSS HARDCODE FILE LINK -->
         <link rel="stylesheet" type="text/css" href="capstone.css">
+
+        <!-- JAVASCRIPT PAGE CONNECTION-->
+        <script src="captsone.js"></script>
     </head>
-    <body class = "body_none">
+    <body class = "bodyNone">
         <br><br><br>
         <div>
             <br>
@@ -20,7 +23,7 @@
                 <br>
                 <h4>  </h4>
                 <br>
-                <img src = "otherFiles/pics/lpcLogo.png" class = "lpcLogo"> &nbsp; &nbsp;
+                <img src = "otherFiles/pics/lpcLogo.png" class = "lpcLogo">
                 <img src = "otherFiles/pics/lpcsgLogo.jpg" class = "lpcsgLogo">
             </div>
             <br>
