--- a/noCurrentReport.html
+++ b/noCurrentReport.html
@@ -2,29 +2,43 @@
 <html>
     <head>
         <title> The Market </title>
-        <!-- Bootstrap for CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"/>
-
         <!-- CSS HARDCODE FILE LINK -->
-        <link rel="stylesheet" type="text/css" href="capstone.css">
+        <link rel = "stylesheet" type = "text/css" href = "capstone.css"/>
+
+        <!-- Bootstrap for CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+
+        <!-- Bootstrap for JQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+        <!-- Bootstrap for JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
         <!-- JAVASCRIPT PAGE CONNECTION-->
-        <script src="captsone.js"></script>
+        <script src = "captsone.js"></script>
     </head>
     <body class = "bodyNone">
         <br><br><br>
         <div>
             <br>
             <div>
-                <h2> Nothing to report at the moment. No Attendance has been recorded yet.</h2>
+                <h2> Nothing to report at the moment.<br> No Attendance has been recorded yet.</h2>
                 <br>
                 <h4 class = "inline"> You can sign in to the market by clicking this button! </h4> &nbsp; &nbsp;
                 <button class = "inline btn btn-primary sideBtn" onclick = "location.replace('index.php')">THE MARKET </button>
                 <br>
-                <h4>  </h4>
-                <br>
+                <h4 class = "inline"> Or: You can activate a market by signin in as an admin! </h4> &nbsp; &nbsp;
+                <button id = "goToAdmin" class = "btn btn-primary sideBtn centrize" data-toggle = "collapse" data-target = "#adminPagePW"> Admin </button>
+                <form method="post" action="adminFuncs.php" class = "centrize w20">
+                    <div class = "collapse" id = "adminPagePW">
+                        <input type = "password" class = "optional form-control" placeholder="insert password here" class = "password" id = "inputAdminPW" name = "inputAdminPW" required pattern = "\S+.*"> 
+                        <input type="hidden" value = "verifyPassword" name = "message"><br>
+                        <button class = "btn btn-info pull-left submitPW"> Submit </button>
+                    </div>  
+                </form>
+                <br><br><br>
                 <img src = "otherFiles/pics/lpcLogo.png" class = "lpcLogo">
-                <img src = "otherFiles/pics/lpcsgLogo.jpg" class = "lpcsgLogo">
+                <img src = "otherFiles/pics/lpcsgLogo.jpg" class = "lpcsgLogo" style = "width: 10% !important; height: 10% !important;">
             </div>
             <br>
         </div>
