--- a/noCurrentReport.html
+++ b/noCurrentReport.html
@@ -28,17 +28,17 @@
                 <button class = "inline btn btn-primary sideBtn" onclick = "location.replace('index.php')">THE MARKET </button>
                 <br>
                 <h4 class = "inline"> Or: You can activate a market by signin in as an admin! </h4> &nbsp; &nbsp;
-                <button id = "goToAdmin" class = "btn btn-primary sideBtn centrize" data-toggle = "collapse" data-target = "#adminPagePW"> Admin </button>
+                <button id = "goToAdmin" class = "btn btn-primary sideBtn centrize" data-toggle = "collapse" data-target = "#adminPagePW"> ADMIN PAGE </button>
                 <form method="post" action="adminFuncs.php" class = "centrize w20">
                     <div class = "collapse" id = "adminPagePW">
-                        <input type = "password" class = "optional form-control" placeholder="insert password here" class = "password" id = "inputAdminPW" name = "inputAdminPW" required pattern = "\S+.*"> 
-                        <input type="hidden" value = "verifyPassword" name = "message"><br>
-                        <button class = "btn btn-info pull-left submitPW"> Submit </button>
+                        <input type = "password" class = "optional form-control w55 inline" placeholder="insert password here" class = "password" id = "inputAdminPW" name = "inputAdminPW" required pattern = "\S+.*"> 
+                        <input type="hidden" value = "verifyPassword" name = "message">
+                        <button class = "btn btn-info pull-right submitPW inline"> Submit </button>
                     </div>  
                 </form>
                 <br><br><br>
                 <img src = "otherFiles/pics/lpcLogo.png" class = "lpcLogo">
-                <img src = "otherFiles/pics/lpcsgLogo.jpg" class = "lpcsgLogo" style = "width: 10% !important; height: 10% !important;">
+                <img src = "otherFiles/pics/lpcsgLogo.jpg" class = "lpcsgLogo" style = "width: 10% !important; height: 10% !important; margin-left: 5% !important;">
             </div>
             <br>
         </div>
