--- a/noCurrentReport.html
+++ b/noCurrentReport.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title> The Market </title>
-        <!-- CSS HARDCODE FILE LINK -->
-        <link rel = "stylesheet" type = "text/css" href = "capstone.css"/>
+       <!-- CSS HARDCODE FILE LINK -->
+       <link href='capstone.css?version=1' rel='stylesheet'></link>
 
-        <!-- Bootstrap for CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+       <!-- Bootstrap for CSS -->
+       <link rel="stylesheet" href="./otherFiles/bootstrap.min.css">
 
         <!-- Bootstrap for JQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -44,4 +44,9 @@
         </div>
         <br><br><br>
     </body>
+    <footer class = "footer">
+        <h5> Powered by Shahaf Dan - Capstone Project </h5>
+        <br>
+        <p>Las Positas College | May 2020</p>
+    </footer>
 </html>
